--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,97 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.navbar-child {
+  position: absolute;
+  width: 100%;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  background-color: #4c1d95;
+  height: 86px;
+}
+.paw-plan {
+  position: relative;
+  line-height: 110%;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.menu-item {
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 12px 8px;
+}
+.buttons-group {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 16px;
+  font-size: 16px;
+}
+.left {
+  position: absolute;
+  top: 24px;
+  left: 80px;
+  background-color: #4c1d95;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 38px;
+}
+.button-text {
+  position: relative;
+  letter-spacing: 0.5px;
+  line-height: 24px;
+  font-weight: 500;
+}
+.text-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 16px;
+}
+.button {
+  border-radius: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 8px;
+}
+.button1 {
+  border-radius: 50px;
+  background-color: #7c3aed;
+  border: 2px solid #7c3aed;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+}
+.buttons-group1 {
+  position: absolute;
+  top: 24px;
+  right: 80px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+  font-size: 16px;
+}
+.navbar {
+  position: relative;
+  width: 100%;
+  height: 86px;
+  text-align: left;
+  font-size: 32px;
+  color: #fff;
+  font-family: Roboto;
+  background-color: #4c1d95;
+}
+
