--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Navbar */
 .navbar-child {
   position: absolute;
   width: 100%;
@@ -104,4 +106,97 @@ code {
   font-family: Roboto;
   background-color: #4c1d95;
 }
+/* Navbar End */
 
+/* Hero */
+.main-headline {
+  align-self: stretch;
+  position: relative;
+  line-height: 110%;
+  font-weight: 800;
+}
+.top {
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.keep-track-of {
+  margin: 0;
+}
+.paragraph {
+  align-self: stretch;
+  position: relative;
+  font-size: 18px;
+  line-height: 160%;
+}
+.hero-button-text {
+  position: relative;
+  letter-spacing: 0.5px;
+  line-height: 24px;
+}
+.hero-text-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 24px;
+}
+.icon-jam-icons-outline-l {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+.hero-button {
+  border-radius: 50px;
+  background-color: #7c3aed;
+  border: 2px solid #7c3aed;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 24px;
+}
+.hero-buttons-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  font-size: 24px;
+  color: #fff;
+}
+.hero-text {
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 32px;
+}
+.hero-img {
+  position: relative;
+  width: 476px;
+  height: 502px;
+  object-fit: cover;
+}
+.hero {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 80px;
+  box-sizing: border-box;
+  gap: 80px;
+  text-align: center;
+  font-size: 72px;
+  color: #0f172a;
+  font-family: Roboto;
+}
+/*Hero End */
