--- a/src/index.css
+++ b/src/index.css
@@ -232,7 +232,6 @@ a{
   width: 651px;
   height: 568px;
   object-fit: cover;
-  margin-left: 5%;
 }
 .caption {
   align-self: stretch;
@@ -294,14 +293,14 @@ a{
   justify-content: flex-start;
   font-size: 24px;
 }
-.section-text {
+.planning-section {
   flex: 1;
   background-color: #4c1d95;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 80px;
+  padding: 80.145px;
   gap: 32px;
 }
 .plan-row {
@@ -318,7 +317,7 @@ a{
   width: 473px;
   height: 210px;
   object-fit: cover;
-  margin-left: 3%;
+  margin-left: -4%
 }
 .dog-vet {
   position: relative;
@@ -352,7 +351,7 @@ a{
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   gap: 10px;
   text-align: left;
