--- a/src/index.css
+++ b/src/index.css
@@ -475,3 +475,22 @@ a{
 }
 
 /* About End */
+
+/* Profile Start */
+.profile-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.profile-box {
+  width: 100%;
+  max-width: 500px;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  padding: 32px;
+  box-sizing: border-box;
+  box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25), 0px 0px 15px rgba(0, 0, 0, 0.07);
+ }
+
+/* Profile End */
