--- a/src/index.css
+++ b/src/index.css
@@ -486,11 +486,22 @@ a{
 .profile-box {
   width: 100%;
   max-width: 500px;
-  background-color: #f4f4f4;
+  background-color: var(--purple);
+  color: white;
   border-radius: 8px;
   padding: 32px;
   box-sizing: border-box;
   box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25), 0px 0px 15px rgba(0, 0, 0, 0.07);
+ }
+
+ .profile-header{
+    text-align: center;
+    margin-bottom: 32px;
+    font-weight: 600;
+ }
+
+ .password-text{
+    margin-right: 12px;
  }
 
 /* Profile End */
