--- a/src/components/PetRegistrationSection.css
+++ b/src/components/PetRegistrationSection.css
@@ -1,6 +1,6 @@
 .PetRegistration {
   position: relative;
-  background-color: #fff;
+  background-color: whitesmoke;
   width: 100%;
   height: 1117px;
   overflow: hidden;
@@ -14,7 +14,7 @@
 }
 
 .PetRegistration label {
-  font-size: 30px; /* Adjust as needed */
+  font-size: 20px; /* Adjust as needed */
   margin-bottom: 20px; /* Add spacing between label and input */
   text-align: left; /* Right-align the labels */
   color: black;
@@ -46,18 +46,23 @@
 .age,
 .breed,
 .weight {
-  width: 100%;
+  width: 200%;
   max-width: 600px;
-  border: 0;
-  background-color: transparent;
+  
+  background-color: white;
+  color: black;
   margin-bottom: 10px;
+  height: 50px;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
 
 .register {
-  width: 200px; /* adjust as needed */
-  height: 50px; /* adjust as needed */
+  width: 50px; /* adjust as needed */
+  height: 200px; /* adjust as needed */
   background-color: blueviolet;
-  color: white;
+  color: blueviolet;
+  margin-top: 20px;
  
 }
