--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -3,7 +3,10 @@
   background-size: cover;
   position: relative;
   width: 100%;
-  height: 850px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   line-height: 0.5;
   font-size: 40px;
@@ -19,13 +22,14 @@
   object-fit: cover;
 }
 .loginBoxBorder1 {
-  position: absolute;
-  top: 100px;
-  left: 521px;
+  position: relative;
   border-radius: 20px;
   background-color: rgba(76, 29, 149, 0.5);
   backdrop-filter: blur(4px);
   width: 700px;
   height: 575px;
+  max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
 }
 
