--- a/src/components/PetRegistrationSection.css
+++ b/src/components/PetRegistrationSection.css
@@ -1,23 +1,43 @@
-.PetRegistration {
+.petregistration-wrapper{
   position: relative;
   background-color: whitesmoke;
   width: 100%;
-  height: 1117px;
+  height: 100vh;
   overflow: hidden;
-  text-align: left;
+  text-align: center;
+  font-size: var(--font-size-13xl);
+  color: var(--color-blue);
+  font-family: var(--font-inter);
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+.PetRegistration {
+  position: relative;
+  background-color: var(--purple);
+  border-radius: 20px;
+
+  width: 700px;
+  height: 575px;
+  max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+
+  overflow: hidden;
+  text-align: center;
   font-size: var(--font-size-13xl);
   color: var(--color-blue);
   font-family: var(--font-inter);
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
 }
 
 .PetRegistration label {
   font-size: 20px; /* Adjust as needed */
   margin-bottom: 20px; /* Add spacing between label and input */
   text-align: left; /* Right-align the labels */
-  color: black;
+  color: white;
 }
 
 .gsp-1-icon {
@@ -36,7 +56,7 @@
   width: 625px;
   height: 101px;
   margin-bottom: 20px;
-  color: blueviolet;
+  color: white;
   text-align: center;
 }
 
@@ -61,8 +81,8 @@
 .register {
   width: 50px; /* adjust as needed */
   height: 200px; /* adjust as needed */
-  background-color: blueviolet;
-  color: blueviolet;
+  background-color: var(--light-purple);
+  color: var(--light-purple);
   margin-top: 20px;
  
 }
