--- a/src/components/PetRegistrationSection.css
+++ b/src/components/PetRegistrationSection.css
@@ -1,6 +1,5 @@
-.petregistration-wrapper{
+.petregistration-wrapper {
   position: relative;
-  background-color: whitesmoke;
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -12,17 +11,16 @@
   justify-content: center;
   align-items: center; 
 }
+
 .PetRegistration {
   position: relative;
   background-color: var(--purple);
   border-radius: 20px;
-
   width: 700px;
   height: 575px;
   max-width: 100%;
   max-height: 100%;
   box-sizing: border-box;
-
   overflow: hidden;
   text-align: center;
   font-size: var(--font-size-13xl);
@@ -34,55 +32,53 @@
 }
 
 .PetRegistration label {
-  font-size: 20px; /* Adjust as needed */
-  margin-bottom: 20px; /* Add spacing between label and input */
-  text-align: left; /* Right-align the labels */
+  font-size: 20px;
+  margin-bottom: 10px;
+  text-align: left;
   color: white;
+  width: 80%; /* Adjust the width as needed */
+  display: block;
 }
 
-.gsp-1-icon {
-  width: 331px;
-  height: 348px;
-  object-fit: cover;
-  background-image: url('gsp.jpeg'); /* Adjust the path accordingly */
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  margin-bottom: 20px;
-  align-self: center;
-}
 
 .register-pet {
   font-size: 96px;
   width: 625px;
   height: 101px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
+  padding-bottom: 10px;
   color: white;
   text-align: center;
 }
 
 .pet-registration-inner,
-.rectangle-textfield,
 .name,
 .age,
 .breed,
 .weight {
-  width: 200%;
-  max-width: 600px;
-  
-  background-color: white;
+  width: 100%; /* Adjust the width as needed */
+  max-width: 500px;
   color: black;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   height: 50px;
   font-size: 20px;
-  margin-bottom: 20px;
+  align-self: flex-start;
+  box-sizing: border-box; 
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
 }
 
-
 .register {
-  width: 50px; /* adjust as needed */
-  height: 200px; /* adjust as needed */
+  width: 150px; /* Adjust the width as needed */
+  height: 40px; /* Adjust the height as needed */
   background-color: var(--light-purple);
   color: var(--light-purple);
-  margin-top: 20px;
+  margin-top: 2px;
+  font: size 20px;
+  color:white;
+  font-size: 10px;
+  margin-bottom: 5px;
  
+
 }
