Finishes the JS and CSS for DogHouse

--- a/src/index.css
+++ b/src/index.css
@@ -524,4 +524,10 @@ a{
   text-align: center;
  }
 
+.doghouse-dog{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ /* other styles... */
+}
 /*Doghouse End */
