--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -37,3 +37,43 @@ button[disabled] {
 button[disabled]:hover {
   background-color: #ccc; 
 }
+
+.calendar-box {
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: #f8f8f8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #333; 
+
+  margin: 20px; /* Add some margin */
+  width: 80%; /* Set the width */
+  height: 65vh; /* Set the height */
+  overflow: auto; /* Add a scrollbar if the content is too large */
+  
+}
+
+.calendar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ }
+
+ .event-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: var(--purple);
+  padding: 10px;
+  color: white;
+  width: 80%;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  border: 1px solid #ccc;
+ }
+
+ .event{
+  font-weight: 400;
+ }
