--- a/src/index.css
+++ b/src/index.css
@@ -616,7 +616,7 @@ button[disabled]:hover {
 
 /* Login Start */
 .loginWrapper {
-  background-image: url("../images/walkingpath.jpg");
+  background-image: url("/src/images/walkingpath.jpg");
   background-size: cover;
   position: relative;
   width: 100%;
@@ -654,7 +654,7 @@ button[disabled]:hover {
 
 /* Register Start */
 .registrationWrapper {
-  background-image: url("../images/happy-dog.png");
+  background-image: url("/src/images/happy-dog.png");
   background-size: cover;
   position: relative;
   width: 100%;
